--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
 					<div class="bar h50"><h6>Video Editing</h6><div class="circle"></div><div class="abar"></div><p class="age">50%</p></div>
 				</div>
 			</div>
-			<div id="port"></div>
+			<div id="port">
+				
+			</div>
 			<div id="blog"></div>
 			<div id="contact"></div>
 		</div>
