--- a/index.html
+++ b/index.html
@@ -13,82 +13,61 @@
 				<a href="#" class="button">Contact</a>
 			</div>
 		</div>
-		
-		<div id="cont">
-			<div id="header">
-				<div id="logo"></div>
-				<div id="menu">
-					<ul>
-						<a href="#header"><li>About Me</li></a>
-						<a href="#social"><li>Skills</li></a>
-						<a href="#port"><li>Portfolio</li></a>
-						<a href="#"><li>Blog</li></a>
-						<a href="pages/contact.html"><li>Contact</li></a>
-					</ul>
-				</div>
+
+		<div id="header">
+			<div id="logo"></div>
+			<div id="menu">
+				<a href="#about"><li class="item">About Me</li></a>
+				<a href="#social"><li class="item">Skills</li></a>
+				<a href="#port"><li class="item">Portfolio</li></a>
+				<a href="#"><li class="item">Blog</li></a>
+				<a href="pages/contact.html"><li class="item">Contact</li></a>
 			</div>
+		</div>
 
-
-			<div id="about">
-				<div id="" class="about story">
+		<div class="about">
+			<div class="aboutbox box1">
 					<h2>My Story</h2>
 					<p class="text">
 						Hello, My interest in web designing stemmed from browsing the internet and seeing awesome sites. Between designing websites and playing video games, I spend most of my time in front of a computer. Some of my passions are writing clean code, creating friendly user experiences. My last name is <b class="blue">NAMA</b> so i'm know by that name among my friends.
 					</p><br>
 					<a href="others/resume.pdf" target="_blank" class="button resume">View My Resume</a>
-				</div>
-				<span id="dp" class="about"></span>
+			</div>
+			<div class="aboutbox box2">
+				<div id="dp"></div>
+			</div>
+			<div class="aboutbox box3">
+				<h2>Personal Information</h2>
+	<!-- 				<div id="pi">
+						<div class="pi tac">Name : </div>
+						<div class="pi tac">Age :</div>
+						<div class="pi tac">Email : </div>
+						<div class="pi tac">Institute : </div>
+						<div class="pi tac">Address :</div>
+						<div class="pi">Vishal Nama</div>
+						<div class="pi">21 Y.O.</div>
+						<div class="pi">hello@vishalnama.com</div>
+						<div class="pi">JIMS Kalkaji, New Delhi</div>
+						<div class="pi">New Delhi, INDIA</div>
+					</div> -->
 
-				<div id="info" class="about">
-					<h2>Personal Information</h2>
-					<div id="pi" class="text">
-						<div id="que">
-							<h5>Name : </h5><hr>
-							<h5>Age : </h5><hr>
-							<h5>E-Mail : </h5><hr>
-							<h5>Institute : </h5><hr>
-							<h5>Address : &nbsp;</h5><hr>
+				<div id="pi" class="text">
+							<div id="que">
+								<h5>Name : </h5><hr>
+								<h5>Age : </h5><hr>
+								<h5>E-Mail : </h5><hr>
+								<h5>Institute : </h5><hr>
+								<h5>Address : &nbsp;</h5><hr>
+							</div>
+							<div id="ans">
+								<h5> Vishal Nama</h5><hr>
+								<h5> 21 Y.O.</h5><hr>
+								<h5> hello@vishalnama.com</h5><hr>
+								<h5> JIMS Kalkaji, New Delhi</h5><hr>
+								<h5> New Delhi, INDIA</h5><hr>
+							</div>
 						</div>
-						<div id="ans" class="blue0">
-							<h5> Vishal Nama</h5><hr>
-							<h5> 21 Y.O.</h5><hr>
-							<h5> hello@vishalnama.com</h5><hr>
-							<h5> JIMS Kalkaji, New Delhi</h5><hr>
-							<h5> New Delhi, INDIA</h5><hr>
-						</div>
-					</div>
-					<div id="social" >
-						<ul>
-							<a href="http://www.facebook.com/nama.vishal" target="_blank"><li id="fb" class="social"></li></a>
-							<a href="http://www.twitter.com/vishal_nama" target="_blank"><li id="tw" class="social"></li></a>
-							<a href="https://in.linkedin.com/in/vishalnama" target="_blank"><li id="in" class="social"></li></a>
-							<a href="https://plus.google.com/+vishalnama" target="_blank"><li id="gp" class="social"></li></a>
-							<a href="https://www.pinterest.com/namavishal/" target="_blank"><li id="pin" class="social"></li></a>
-						</ul>
-					</div>
 				</div>
-			</div>
-			<div id="skills">
-				<div id="stext" class="about story ">
-					<h3>Skills</h3>
-					<p class="black shadow size-25">
-						Being behind a computer screen most of the time. A person is bound to pick up some computer skills, in my case i picked up Designing and Web Developing skills which helps me out on a daily basis.
-					</p>
-				</div>
-				<div id="bgraph">
-					<div class="bar h90"><h6>HTML</h6><div class="circle"></div><div class="abar"></div><p class="age">90%</p></div>
-					<div class="bar h30"><h6>JavaScript</h6><div class="circle"></div><div class="abar"></div><p class="age">30%</p></div>
-					<div class="bar h85"><h6>CSS 3</h6><div class="circle"></div><div class="abar"></div><p class="age">85%</p></div>
-					<div class="bar h60"><h6>Photoshop</h6><div class="circle"></div><div class="abar"></div><p class="age">60%</p></div>
-					<div class="bar h40"><h6>Illustrator</h6><div class="circle"></div><div class="abar"></div><p class="age">40%</p></div>
-					<div class="bar h50"><h6>Video Editing</h6><div class="circle"></div><div class="abar"></div><p class="age">50%</p></div>
-				</div>
-			</div>
-			<div id="port">
-				
-			</div>
-			<div id="blog"></div>
-			<div id="contact"></div>
 		</div>
 	</div>
 	<script src="js/jquery-2.1.3.min.js"></script>
