Skills page added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			</div>
 		</div>
 
-		<div class="about">
+		<div id="about">
 			<div class="aboutbox box1">
 					<h2>My Story</h2>
 					<p class="text">
@@ -55,6 +55,31 @@
 								<h5> New Delhi, INDIA</h5><hr>
 							</div>
 					</div>
+					<div id="social" >
+						<ul>
+							<a href="http://www.facebook.com/nama.vishal" target="_blank"><li id="fb" class="social"></li></a>
+							<a href="http://www.twitter.com/vishal_nama" target="_blank"><li id="tw" class="social"></li></a>
+							<a href="https://in.linkedin.com/in/vishalnama" target="_blank"><li id="in" class="social"></li></a>
+							<a href="https://plus.google.com/+vishalnama" target="_blank"><li id="gp" class="social"></li></a>
+							<a href="https://www.pinterest.com/namavishal/" target="_blank"><li id="pin" class="social"></li></a>
+						</ul>
+					</div>
+			</div>
+		</div>
+		<div id="skills">
+			<div id="stext" class=" story skill">
+				<h3>Skills</h3>
+				<p id="aboutskill" class="-">
+					Being behind a computer screen most of the time. A person is bound to pick up some computer skills, in my case i picked up Designing and Web Developing skills which helps me out on a daily basis.
+				</p>
+			</div>
+			<div id="bgraph" class="skill">
+				<div class="bar h90"><h6>HTML</h6><div class="circle"></div><div class="abar"></div><p class="age">90%</p></div>
+				<div class="bar h30"><h6>JavaScript</h6><div class="circle"></div><div class="abar"></div><p class="age">30%</p></div>
+				<div class="bar h85"><h6>CSS 3</h6><div class="circle"></div><div class="abar"></div><p class="age">85%</p></div>
+				<div class="bar h60"><h6>Photoshop</h6><div class="circle"></div><div class="abar"></div><p class="age">60%</p></div>
+				<div class="bar h40"><h6>Illustrator</h6><div class="circle"></div><div class="abar"></div><p class="age">40%</p></div>
+				<div class="bar h50"><h6>Video Editing</h6><div class="circle"></div><div class="abar"></div><p class="age">50%</p></div>
 			</div>
 		</div>
 	</div>
