--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 				<a href="#" class="button">Contact</a>
 			</div>
 		</div>
-
 		<div id="header">
 			<div id="logo"></div>
 			<div id="menu">
@@ -25,7 +24,6 @@
 				<a href="pages/contact.html"><li class="item">Contact</li></a>
 			</div>
 		</div>
-
 		<div id="about">
 			<div class="aboutbox box1">
 					<h2>My Story</h2>
@@ -75,16 +73,57 @@
 			</div>
 			<div id="bgraph" class="skill">
 				<div class="bar h90"><h6>HTML</h6><div class="circle"></div><div class="abar"></div><p class="age">90%</p></div>
-				<div class="bar h30"><h6>Java Script</h6><div class="circle"></div><div class="abar"></div><p class="age">30%</p></div>
+				<div class="bar h30"><h6>JavaScript</h6><div class="circle"></div><div class="abar"></div><p class="age">30%</p></div>
 				<div class="bar h85"><h6>CSS 3</h6><div class="circle"></div><div class="abar"></div><p class="age">85%</p></div>
 				<div class="bar h60"><h6>Photoshop</h6><div class="circle"></div><div class="abar"></div><p class="age">60%</p></div>
 				<div class="bar h40"><h6>Illustrator</h6><div class="circle"></div><div class="abar"></div><p class="age">40%</p></div>
-				<div class="bar h50"><h6>VideoEditing</h6><div class="circle"></div><div class="abar"></div><p class="age">50%</p></div>
+				<div class="bar h50"><h6>Video Editing</h6><div class="circle"></div><div class="abar"></div><p class="age">50%</p></div>
 			</div>
 		</div>
+		<div id="port">
+			<div id="portmain">
+				<h4 class="noval flex">WORK DONE BY ME !</h4>
+			</div>
+			<div id="portsub">
+				<div class="portcat website">
+					<!-- <img src="images/portfolio/website.png"> -->
+					<p>websites</p>
+					<p2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam ullam ab veniam, numquam cupiditate maiores repudiandae? Corporis libero, quod, maxime exercitationem, asperiores omnis inventore officiis cumque laborum molestiae ipsam facere! <br><br><a href="#">LEARN MORE</a></p2>
+					<div id="proact">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias pariatur veniam magnam quisquam consequuntur, voluptas illum adipis. <br><br> <a href="#">LEARN MORE</a></p>
+					</div>
+				</div>
+				<div class="portcat poster">
+					<!-- <img src="images/portfolio/poster.png"> -->
+					<p>posters</p>
+					<p2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam ullam ab veniam, numquam cupiditate maiores repudiandae? Corporis libero, quod, maxime exercitationem, asperiores omnis inventore officiis cumque laborum molestiae ipsam facere!<br><br><a href="#">LEARN MORE</a></p2>
+					<div id="proact">
+						<p>Lorem ipsum dolor sit amet,  ut blanditiis amet alias ex commodi soluta corrupti, aliquid magni, quisquam iure.<br><br> <a href="#">LEARN MORE</a></p>
+					</div>
+				</div>
+				<div class="portcat wallpaper">
+					<!-- <img src="images/portfolio/wallpaper.png"> -->
+					<p>Wallpaper</p>
+					<p2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam ullam ab veniam, numquam cupiditate maiores repudiandae? Corporis libero, quod, maxime exercitationem, asperiores omnis inventore officiis cumque laborum molestiae ipsam facere!<br><br><a href="#">LEARN MORE</a></p2>
+					<div id="proact">
+						<p>Lorem ipsum dolor sit amet, veniam nulla! Qui explicabo quam laboriosam accusamus ratione facere voluptatibus minima.<br><br> <a href="#">LEARN MORE</a></p>
+					</div>
+				</div>
+				<div class="portcat misc">
+					<!-- <img src="images/portfolio/misc.png"> -->
+					<p>misc.</p>
+					<p2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam ullam ab veniam, numquam cupiditate maiores repudiandae? Corporis libero, quod, maxime exercitationem, asperiores omnis inventore officiis cumque laborum molestiae ipsam facere!<br><br><a href="#">LEARN MORE</a></p2>
+					<div id="proact">
+						<p>Lorem ipsum dolor sit amet,  praesentium autem iusto adipisci ipsam, unde dolores nostrum libero suscipit accusantium facilis.<br><br> <a href="#">LEARN MORE</a></p>
+					</div>
+				</div>
+			</div></div>
+		</div>
 
-	</div>
+
+
+
 	<script src="js/jquery-2.1.3.min.js"></script>
     <script src="js/script.js"></script>
-</body>
+</body> 
 </html>
