Portfolio page mobile fixed

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 				<div class="portcat website">
 					<!-- <img src="images/portfolio/website.png"> -->
 					<p>websites</p>
-					<p2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam ullam ab veniam, numquam cupiditate maiores repudiandae? Corporis libero, quod, maxime exercitationem, asperiores omnis inventore officiis cumque laborum molestiae ipsam facere! <br><br><a href="#">LEARN MORE</a></p2>
+					<p2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam ullam ab veniam, numquam cupiditate maiores repudiandae? Corporis libero, quod, mr sit amet, consectetur adipisicing elit. Aperiam ullam ab veniam, numquam cupiditate maiores repudiandae? Corporis libero, quod,axime exercitationem, asperiores omnis inventore officiis cumque laborum molestiae ipsam facere! <br><br><a href="#">LEARN MORE</a></p2>
 					<div id="proact">
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias pariatur veniam magnam quisquam consequuntur, voluptas illum adipis. <br><br> <a href="#">LEARN MORE</a></p>
 					</div>
@@ -119,7 +119,9 @@
 				</div>
 			</div></div>
 		</div>
-
+		<div id="blog">
+			
+		</div>
 
 
 
